Mise à jour du notebook avec nettoyage des sorties

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove"
+    ]
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -13,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove"
+    ]
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -28,7 +36,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove"
+    ]
+   },
    "outputs": [],
    "source": [
     "from src.FonctionsPerso import *\n",
@@ -595,7 +607,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove"
+    ]
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -607,7 +623,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Dans anaconda prompt\n",
@@ -659,7 +679,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove"
+    ]
+   },
    "outputs": [],
    "source": [
     "# mlflow models serve -m \"mlruns/855462862201448649/44dc24312237424b9b341bed1ed4f903/artifacts/model\" -p 5001\n"
